tests/lean/protected.lean.expected.out
protected.lean:10:7: error: unknown identifier 'x'
(sorryAx ?m.24) : ?m.24
Foo.x : Nat
Bla.Foo.y : Nat
protected.lean:22:7: error: unknown identifier 'y'
(sorryAx ?m.70) : ?m.70
Bla.Foo.z : Nat
